--- a/experiments/configs/standard_experiment.yaml
+++ b/experiments/configs/standard_experiment.yaml
@@ -22,6 +22,7 @@ lojban-test:
   dataset:
     full_dataset_file_path: /home/ubuntu/mars-arnesen-gh/garethtan/data/datasets/lojban/lojban_dataset.jsonl
     dataset_type: lojban
+    split_type: val
 debater-untrained-judge-untrained:
   batch_size: 1
   num_speeches: 2
