--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ dependencies = [
     "huggingface-hub==0.34.4",
     "humanfriendly==10.0",
     "idna==3.10",
+    "inspect-ai>=0.3.69",
     "jinja2==3.1.6",
     "jiter==0.10.0",
     "joblib==1.5.1",
