--- a/experiments/configs/standard_experiment.yaml
+++ b/experiments/configs/standard_experiment.yaml
@@ -100,6 +100,75 @@ debater-untrained-judge-trained:
   dataset:
     dataset_type: quality
     split_type: val
+debater-untrained-gpt-o4-mini-0913-judge-trained:
+  batch_size: 1
+  num_speeches: 2
+  flip: False
+  enable_self_debate: True
+  speech_structure: default_debate
+  alternate: False
+  agents:
+    debaters:
+      - model_settings:
+          model_type: openai
+          alias: openai-o4-debater
+          model_file_path: o4-mini-2025-04-16
+    judge:
+      model_settings:
+        model_type: openai
+        alias: openai-41-judge
+        model_file_path: ft:gpt-4.1-2025-04-14:modulo-research-ltd:michael-and-khan-data-judge-31-07:BzYGc8SU
+  dataset:
+    dataset_type: quality
+    split_type: val
+debater-llama-sft-trained-gpt-41-nano-untrained-judge:
+  batch_size: 1
+  num_speeches: 2
+  flip: False
+  enable_self_debate: True
+  speech_structure: default_debate
+  alternate: False
+  agents:
+    debaters:
+      - model_settings:
+          model_type: llama3
+          model_file_path: /home/ubuntu/mars-arnesen-gh/leonidtsyplenkov/models/trained_models/llama-3-mega-merged-no-judge-speeches-31.07
+          alias: "sft-0731-model"
+          require_quote_validation: True
+          generation_params:
+            temperature: 0.5
+    judge:
+      model_settings:
+        model_type: openai
+        alias: openai-41-nano-untrained-judge
+        model_file_path: gpt-4.1-nano-2025-04-14
+  dataset:
+    dataset_type: quality
+    split_type: val
+debater-llama-rl-trained-gpt-41-nano-untrained-judge:
+  batch_size: 1
+  num_speeches: 2
+  flip: False
+  enable_self_debate: True
+  speech_structure: default_debate
+  alternate: False
+  agents:
+    debaters:
+      - model_settings:
+          model_type: llama3
+          model_file_path: /home/ubuntu/mars-arnesen-gh/garethtan/models/trained_models/llama-3-DPO-811-FullTrainDebateRoundTwo-full-trained
+          alias: "dpo-rl-round-2-240-0810-model"
+          require_quote_validation: True
+          generation_params:
+            temperature: 0.5
+    judge:
+      model_settings:
+        model_type: openai
+        alias: openai-41-nano-untrained-judge
+        model_file_path: gpt-4.1-nano-2025-04-14
+  dataset:
+    dataset_type: quality
+    split_type: val
 debater-sft-trained-0731-judge-untrained:
   batch_size: 1
   num_speeches: 2
@@ -172,7 +241,7 @@ debater-gpt-oss-untrained-judge-trained-0731:
   dataset:
     dataset_type: quality
     split_type: val
-debater-gpt-oss-trained-0822-judge-o4-mini-sft-0731:
+debater-gpt-oss-trained-0822-judge-41-sft-0731:
   batch_size: 1
   num_speeches: 2
   flip: False
@@ -192,7 +261,7 @@ debater-gpt-oss-trained-0822-judge-o4-mini-sft-0731:
     judge:
       model_settings:
         model_type: openai
-        alias: openai-o4-mini-judge-sft-0731
+        alias: openai-41-mini-judge-sft-0731
         model_file_path: ft:gpt-4.1-2025-04-14:modulo-research-ltd:michael-and-khan-data-judge-31-07:BzYGc8SU
   dataset:
     dataset_type: quality
