--- a/experiments/configs/standard_experiment.yaml
+++ b/experiments/configs/standard_experiment.yaml
@@ -100,7 +100,7 @@ lojban-debaters-o4-mini-untrained-judge-nano-sfted:
             require_quote_validation: True
             generation_params:
               temperature: 0.5
-              max_new_tokens: 500
+              max_new_tokens: 1400
       judge:
         model_settings:
           model_type: openai
@@ -128,7 +128,7 @@ lojban-debaters-o4-mini-trained-judge-nano-sfted:
             require_quote_validation: True
             generation_params:
               temperature: 0.5
-              max_new_tokens: 500
+              max_new_tokens: 1400
       judge:
         model_settings:
           model_type: openai
@@ -297,6 +297,7 @@ quality-debaters-o4-mini-untrained-judge-nano-sfted:
           require_quote_validation: True
           generation_params:
             temperature: 0.5
+            max_new_tokens: 1400
     judge:
       model_settings:
         model_type: openai
@@ -321,6 +322,7 @@ quality-debaters-o4-mini-trained-judge-nano-sfted:
           require_quote_validation: True
           generation_params:
             temperature: 0.5
+            max_new_tokens: 1400
     judge:
       model_settings:
         model_type: openai
@@ -1684,6 +1686,31 @@ data-generation-llama-sfted-gpt-41-nano-judge-sfted:
           model_type: llama3
           model_file_path: /home/ubuntu/mars-arnesen-gh/leonidtsyplenkov/models/trained_models/llama-3-mega-merged-no-judge-speeches-31.07
           alias: "sft-0731"
+          require_quote_validation: True
+          generation_params:
+            temperature: 0.5
+    judge:
+      model_settings:
+        model_type: openai
+        alias: openai-nano-sft-judge
+        model_file_path: ft:gpt-4.1-nano-2025-04-14:modulo-research-ltd:michael-and-khan-data-judge-nano-16-09:CGRIpeD6
+  dataset:
+    dataset_type: quality
+    split_type: train
+    flip_sides: False
+data-generation-llama-sfted-gpt-41-nano-judge-sfted-round-two:
+  batch_size: 1
+  num_speeches: 2
+  flip: True
+  enable_self_debate: True
+  multi_round_branching: half
+  agents:
+    debaters:
+      - model_settings:
+          model_type: llama3
+          model_file_path: /home/ubuntu/mars-arnesen-gh/garethtan/models/trained_models/llama-3-dpo-round-1-nano-judge-0917
+          peft_base_model: /home/ubuntu/mars-arnesen-gh/leonidtsyplenkov/models/trained_models/llama-3-mega-merged-no-judge-speeches-31.07
+          alias: "llama-dpo-round-1-nano-judge-0917"
           require_quote_validation: True
           generation_params:
             temperature: 0.5
